// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkout - Location should match snapshot as Branch 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="checkout-pickup-location-address"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-uzccd-MuiTypography-root"
    >
      Test 0
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      1234567890
    </p>
  </div>
</div>
`;

exports[`Checkout - Location should match snapshot as ContractDetails 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="checkout-pickup-location-address"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-uzccd-MuiTypography-root"
    >
      Steve Jobs
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      123 Fake St
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      Suite Fake
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      Fakinton, FA 99999
    </p>
  </div>
</div>
`;

exports[`Checkout - Location should match snapshot as CustomAddressInput 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="checkout-pickup-location-address"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-uzccd-MuiTypography-root"
    >
      Softlayer
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      123 Chimney Rock
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      #107
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      Houston, Texas 77012
    </p>
  </div>
</div>
`;

exports[`Checkout - Location should match snapshot as ErpAccount 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="checkout-pickup-location-address"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-uzccd-MuiTypography-root"
    >
      HG
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      123 S Gessner Rd
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      Suite 245
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      Houston, Texas 77472
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      832-965-9280
    </p>
  </div>
</div>
`;

exports[`Checkout - Location should match snapshot with undefined props 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="checkout-pickup-location-address-loading"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
        style="width: 150px;"
      />
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
        style="width: 200px;"
      />
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
        style="width: 100px;"
      />
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
        style="width: 200px;"
      />
    </p>
  </div>
</div>
`;

exports[`Checkout - Location should match snapshot without boldnam,e 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="checkout-pickup-location-address"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
    >
      Softlayer
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      123 Chimney Rock
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      #107
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
    >
      Houston, Texas 77012
    </p>
  </div>
</div>
`;
